corrected overflow x issues

--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -173,9 +173,9 @@
 }
 
 .signup-login-container .signup-button {
-  padding: 10px;
+  padding: 10px 15px;
   background-color: rgb(127, 176, 255);
-  border-radius: 10px;
+  border-radius: 20px;
   color: black;
   font-weight: bold;
   transition: 0.3s ease;
@@ -189,9 +189,9 @@
 }
 
 .signup-login-container .login-button {
-  padding: 10px;
-  border-radius: 10px;
-  transition: 0.2s ease;
+  padding: 10px 15px;
+  border-radius: 20px;
+  transition: 0.4s ease;
 
   /* display: flex;
   align-items: center; */
