--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -9,6 +9,7 @@
 html, body {
     background-color: black;
     color: white;
+    overflow-x: hidden;
 }
 
 :root {
